--- a/client/src/app/home/home.pug
+++ b/client/src/app/home/home.pug
@@ -15,13 +15,7 @@ header-component
                         a.btn.btn-primary.google((click)="clickGoogleLogin()") Sign in with Google
                         //- .fb-login-button(data-width="300" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false")
                     .logged-in-ctnr(*ngIf="accountService.loaded")
-                        p.name-label Name
-                        form.name-form((ngSubmit)="submitName()", ngNativeValidate)
-                            .row
-                                .col-8
-                                    input([(ngModel)]="name", name="name", maxlength="40", placeholder="Name", required)
-                                .col-4
-                                    button.btn.btn-success(type="submit", [disabled]="reqInProgress || name == accountService.account.name") Save
+                        input.name-input([(ngModel)]="name", (ngModelChange)="onNameChange()", name="name", maxlength="40", placeholder="Name", required, autofocus)
                         .divider
                         //- button.btn.btn-primary Find Game
                         button.btn.btn-success.btn-create((click)="clickCreateGame()") Create Game
