--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -43,22 +43,15 @@
         .btn {
             margin-bottom: 10px;
         }
-        .name-label {
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-        .name-form {
-            .col-8 {
-                padding-right: 5px;
-            }
-            .col-4 {
-                padding-left: 5px;
+        .name-input {
+            &:focus {
+                border: none;
             }
         }
         .divider {
             border-bottom: 1px solid lighten(@background-color, 30%);
             height: 11px;
-            margin: 5px auto 25px;
+            margin: 10px auto 20px;
             width: 25%;
             text-align: center;
             font-size: 14px;
