--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -9,6 +9,7 @@
 .board {
     max-width: 640px;
     margin: 45px auto 0;
+    user-select: none;
     &.activeplayer {
         cursor: pointer;
     }
