--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -14,10 +14,8 @@ html
     body
         block content
 
-        script(type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js" async defer)
-        script.
-            function onGoogleLoad() { gapi.load("auth2", null) }
-        script(type="text/javascript" src="https://apis.google.com/js/platform.js" onload="onGoogleLoad()" async defer)
+        script(type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js")
+        script(type="text/javascript" src="https://apis.google.com/js/platform.js")
 
         script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
