--- a/client/src/app/home/home.pug
+++ b/client/src/app/home/home.pug
@@ -13,9 +13,8 @@ header-component
                         .divider: span.text or
                         a.btn.btn-primary.facebook((click)="clickFbLogin()") Sign in with Facebook
                         a.btn.btn-primary.google((click)="clickGoogleLogin()") Sign in with Google
-                        //- .fb-login-button(data-width="300" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false")
                     .logged-in-ctnr(*ngIf="accountService.loaded")
-                        input.name-input([(ngModel)]="name", (ngModelChange)="onNameChange()", name="name", maxlength="40", placeholder="Name", required, autofocus)
+                        input.name-input([(ngModel)]="name", (ngModelChange)="onNameChange($event)", name="name", maxlength="40", placeholder="Name", required, autofocus)
                         .divider
                         //- button.btn.btn-primary Find Game
                         button.btn.btn-success.btn-create((click)="clickCreateGame()") Create Game
