--- a/client/src/app/match/match.pug
+++ b/client/src/app/match/match.pug
@@ -18,10 +18,17 @@ header-component
                 .bottom-ctnr(*ngIf="darkProfile != null")
                     p.name {{darkProfile.name}}
         .col-sm-6
-            .right
+            .right.d-none.d-sm-block
                 .player-ctnr-right([ngClass]="{active: match.playerDarkId != null && match.playerLightId != null && match.turn == Side.LIGHT}")
                     .top-ctnr
                         img.piece-icon(src="/img/piece-light.svg")
                         p.count {{lightCount}}
+                    .bottom-ctnr(*ngIf="lightProfile != null")
+                        p.name {{lightProfile.name}}
+            .d-block.d-sm-none
+                .player-ctnr-left([ngClass]="{active: match.playerDarkId != null && match.playerLightId != null && match.turn == Side.LIGHT}")
+                    .top-ctnr
+                        p.count {{lightCount}}
+                        img.piece-icon(src="/img/piece-light.svg")
                     .bottom-ctnr(*ngIf="lightProfile != null")
                         p.name {{lightProfile.name}}
