--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -68,6 +68,9 @@
         .overflow-ellipsis;
         font-size: 30px;
         text-align: center;
+        @media(max-width: @screen-xs-max) {
+            font-size: 18px;
+        }
     }
 }
 .player-ctnr {
@@ -77,6 +80,7 @@
     display: inline-block;
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 15px;
     .top-ctnr {
         padding-bottom: 10px;
         .piece-icon {
