--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,11 +1,12 @@
-@font-color-light: #fff;
-@font-color-dark: #384053;
-@primary-color: #9900ff;
+@font-color: #384053;
+@border-color: lighten(@font-color, 50%);
+@primary-color: lighten(#4E00F8, 15%);
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
 @error-color: #F44040;
-@success-color: #00C759;
-@background-color: #2D2D2D;
+@success-color: darken(#5eff00, 15%);
+// @background-color: #2D2D2D;
+@background-color: #fff;
 
 @container-width: 960px;
 @screen-xl-min: 1200px;
