--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -13,7 +13,7 @@
             margin-bottom: 10px;
         }
         .divider {
-            border-bottom: 1px solid @font-color-light;
+            border-bottom: 1px solid lighten(@font-color, 50%);
             height: 11px;
             margin: 10px 0 30px;
             width: 100%;
@@ -44,12 +44,12 @@
             margin-bottom: 10px;
         }
         .name-input {
-            &:focus {
-                border: none;
-            }
+            // &:focus {
+            //     border: none;
+            // }
         }
         .divider {
-            border-bottom: 1px solid lighten(@background-color, 30%);
+            border-bottom: 1px solid lighten(@font-color, 50%);
             height: 11px;
             margin: 10px auto 20px;
             width: 25%;
