--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -2,13 +2,13 @@
 @import "less/mixins.less";
 
 .join-btn {
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 24px;
     width: 140px;
 }
 .board {
     max-width: 640px;
-    margin: 45px auto 0;
+    margin: 15px auto 0;
     user-select: none;
     &.activeplayer {
         cursor: pointer;
@@ -46,6 +46,7 @@
             width: 100%;
             height: auto;
             border-radius: 2px;
+            background-color: #FFB672;
         }
         .piece {
             background-size: 88% 88%;
@@ -63,7 +64,7 @@
     }
 }
 .status-ctnr {
-    margin: 30px 0;
+    margin: 30px 0 100px;
     .status {
         .overflow-ellipsis;
         font-size: 30px;
@@ -73,56 +74,56 @@
         }
     }
 }
-.player-ctnr {
-    background-color: lighten(#333333, 5%);
-    min-height: 90px;
-    width: 240px;
-    display: inline-block;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    .top-ctnr {
-        padding-bottom: 10px;
-        .piece-icon {
-            height: 70px;
-            width: auto;
+.score-ctnr {
+    padding-top: 30px;
+    .player-ctnr {
+        border: 1px solid @border-color;
+        min-height: 90px;
+        width: 240px;
+        display: inline-block;
+        padding: 10px;
+        border-radius: 3px;
+        margin-bottom: 15px;
+        .top-ctnr {
+            padding-bottom: 10px;
+            .piece-icon {
+                height: 70px;
+                width: auto;
+            }
+            .count {
+                font-size: 68px;
+                line-height: 75px;
+                padding: 0 13px;
+            }
+        }
+        .bottom-ctnr {
+            border-top: 1px solid @border-color;
+            padding-top: 10px;
+            .name {
+                text-align: center;
+                font-size: 14px;
+            }
+        }
+        &.active {
+            box-shadow: 0 0 6px @primary-color;
+        }
+    }
+    .player-ctnr-left {
+        .player-ctnr;
+        .count {
+            float: right;
+        }
+        .icon {
+            float: left;
+        }
+    }
+    .player-ctnr-right {
+        .player-ctnr;
+        .icon {
+            float: right;
         }
         .count {
-            font-size: 68px;
-            line-height: 75px;
-            padding: 0 13px;
+            float: left;
         }
-    }
-    .bottom-ctnr {
-        border-top: 1px solid lighten(@background-color, 30%);
-        padding-top: 10px;
-        .name {
-            text-align: center;
-            font-size: 14px;
-        }
-    }
-    &.active {
-        background-color: lighten(#333333, 25%);
-        .bottom-ctnr {
-            border-color: #fff
-        }
-    }
-}
-.player-ctnr-left {
-    .player-ctnr;
-    .count {
-        float: right;
-    }
-    .icon {
-        float: left;
-    }
-}
-.player-ctnr-right {
-    .player-ctnr;
-    .icon {
-        float: right;
-    }
-    .count {
-        float: left;
     }
 }
