--- a/client/src/app/home/home.pug
+++ b/client/src/app/home/home.pug
@@ -16,5 +16,5 @@ header-component
                     .logged-in-ctnr(*ngIf="accountService.loaded")
                         input.form-control.name-input([(ngModel)]="name", (ngModelChange)="onNameChange($event)", name="name", maxlength="40", placeholder="Name", required, autofocus)
                         .divider
-                        //- button.btn.btn-primary Find Game
+                        button.btn.btn-primary((click)="clickFindGame()") Find Game
                         button.btn.btn-success.btn-create((click)="clickCreateGame()") Create Game
