--- a/client/views/partials/scripts-aot.pug
+++ b/client/views/partials/scripts-aot.pug
@@ -1,1 +1,9 @@
 script(src=`/js/app.js?${timestamp}`)
+
+script(async src="https://www.googletagmanager.com/gtag/js?id=UA-146015508-1")
+script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146015508-1');
