--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,10 +1,10 @@
 @font-color: #384053;
 @border-color: lighten(@font-color, 50%);
-@primary-color: lighten(#4E00F8, 15%);
+@primary-color: #630BF8;
 @secondary-color: #0092ff;
 @tertiary-color: #94c5ff;
 @error-color: #F44040;
-@success-color: darken(#5eff00, 15%);
+@success-color: darken(#FCBE8A, 35%);
 // @background-color: #2D2D2D;
 @background-color: #fff;
 
