--- a/client/less/common.less
+++ b/client/less/common.less
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: @font-weight-regular;
     font-size: 12px;
     color: @font-color;
@@ -17,6 +17,7 @@ p {
     margin-bottom: 0;
     font-weight: @font-weight-regular;
     line-height: initial;
+    font-size: 14px;
 }
 
 a {
@@ -80,7 +81,7 @@ input {
     background-color: @success-color;
     transition: background-color 100ms;
     &:hover {
-        background-color: darken(@success-color, 5%);
+        background-color: darken(@success-color, 10%);
     }
 }
 
@@ -118,6 +119,6 @@ input {
         text-align: center;
         font-size: 24px;
         margin-bottom: 30px;
-        font-weight: @font-weight-semibold;
+        font-weight: @font-weight-bold;
     }
 }
