--- a/client/src/app/partials/header/header.pug
+++ b/client/src/app/partials/header/header.pug
@@ -29,15 +29,19 @@ ng-template(#aboutModal, let-c="close")
     .modal-body.about-modal
         .fas.fa-times((click)="c()")
         p.title About
-        a.btn.btn-primary(href="https://en.wikipedia.org/wiki/Reversi#Rules" target="_blank" referrer="noreferrer") How to play
+        .row(style="margin-top: 50px")
+            .col-6
+                a.btn.btn-success(href="https://en.wikipedia.org/wiki/Reversi#Rules" target="_blank" referrer="noreferrer") How to play
+            .col-6
+                p.feedback.right: a(href="mailto:jordanluyke@gmail.com") Feedback?
         //- p.created Created by Jordan Luyke
-        p.feedback: a(href="mailto:jordanluyke@gmail.com") Feedback?
 
 ng-template(#settingsModal, let-c="close")
     .modal-body.settings-modal
         .fas.fa-times((click)="c()")
         p.title Settings
-        .form-check.form-check-inline
+        p.center(style="margin-bottom: 25px") Not yet available
+        //- .form-check.form-check-inline
             input.form-check-input#delayCheckbox(type="checkbox", [(ngModel)]="settings.delayEnabled", (ngModelChange)="onDelayEnabledChange()", disabled)
             label.form-check-label(for="delayCheckbox") Move delay
 
