--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -7,7 +7,7 @@ html
         base(href="/")
         title Reversi
         link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
-        link(href="/node_modules/roboto-fontface/css/roboto/roboto-fontface.css" rel="stylesheet")
+        link(href="/node_modules/lato-font/css/lato-font.min.css" rel="stylesheet")
         link(href=`/node_modules/bootstrap/dist/css/bootstrap.min.css?${timestamp}` rel="stylesheet")
         link(href=`/node_modules/@fortawesome/fontawesome-free/css/all.min.css?${timestamp}` rel="stylesheet")
         link(href=`/css/client.css?${timestamp}` rel="stylesheet")
