show create game after delay during find game

--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -8,6 +8,9 @@
     .fa-circle-notch {
         font-size: 50px;
     }
+    .create-ctnr {
+        margin-top: 60px;
+    }
     .initial-ctnr {
         .btn {
             margin-bottom: 10px;
