styling + mobile hover fix

--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -8,6 +8,10 @@
     .fa-circle-notch {
         font-size: 50px;
     }
+    .find-text {
+        font-size: 32px;
+        margin-top: 50px;
+    }
     .create-ctnr {
         margin-top: 60px;
     }
