--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -18,14 +18,15 @@
         padding: 7px;
         box-shadow: 0 0;
         border-bottom: 2px solid;
-        border-radius: 2px;
         border-color: rgba(0, 0, 0, 0);
         transition: border-color 100ms;
         .active-border {
             border-color: @primary-color;
         }
-        &:hover:not(.active) {
-            .active-border;
+        @media (hover: hover) and (pointer: fine) {
+            &:hover {
+                .active-border;
+            }
         }
         &.active {
             cursor: default;
