--- a/client/less/common.less
+++ b/client/less/common.less
@@ -63,25 +63,65 @@ input {
     border-radius: 3px;
     border: 0;
     padding: 8px 15px 7px;
+    cursor: pointer;
     &:focus {
         outline: none !important;
         box-shadow: none !important;
+    }
+    &[disabled] {
+        cursor: not-allowed;
+    }
+    &.loading {
+        cursor: not-allowed;
+        color: transparent;
+        position: relative;
+        &:active.loading {
+            color: transparent !important;
+        }
+        &:before {
+            font-family: "Font Awesome 5 Free";
+            font-size: 30px;
+            content: "\f1ce";
+            font-weight: 900;
+            color: white;
+            position: absolute;
+            top: 6%;
+            left: 40%;
+            animation: fa-spin 2s linear infinite;
+        }
     }
 }
 
 .btn-primary {
     background-color: @primary-color;
     transition: background-color 100ms;
-    &:hover {
-        background-color: darken(@primary-color, 10%);
+    &:hover, &:active.loading {
+        background-color: @primary-color !important;
+    }
+    &:hover:not([disabled]):not(.loading) {
+        background-color: darken(@primary-color, 10%) !important;
     }
 }
 
 .btn-success {
     background-color: @success-color;
     transition: background-color 100ms;
-    &:hover {
-        background-color: darken(@success-color, 10%);
+    &:hover, &:active.loading {
+        background-color: @success-color !important;
+    }
+    &:hover:not([disabled]):not(.loading) {
+        background-color: darken(@success-color, 10%) !important;
+    }
+}
+
+.btn-secondary {
+    background-color: lighten(#6c757d, 15%);
+    transition: background-color 100ms;
+    &:hover, &:active.loading {
+        background-color: lighten(#6c757d, 15%) !important;
+    }
+    &:hover:not([disabled]):not(.loading) {
+        background-color: lighten(#6c757d, 5%) !important;
     }
 }
 
@@ -120,5 +160,18 @@ input {
         font-size: 24px;
         margin-bottom: 30px;
         font-weight: @font-weight-bold;
+    }
+}
+
+.divider {
+    border-bottom: 1px solid lighten(@font-color, 50%);
+    height: 11px;
+    margin: 10px 0 30px;
+    width: 100%;
+    text-align: center;
+    .text {
+        background-color: @background-color;
+        padding: 0 10px;
+        font-size: 14px;
     }
 }
