--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -19,18 +19,6 @@
         .btn {
             margin-bottom: 10px;
         }
-        .divider {
-            border-bottom: 1px solid lighten(@font-color, 50%);
-            height: 11px;
-            margin: 10px 0 30px;
-            width: 100%;
-            text-align: center;
-            .text {
-                background-color: @background-color;
-                padding: 0 10px;
-                font-size: 14px;
-            }
-        }
         .facebook {
             background-color: #4267B2;
             background-image: url("/img/facebook.svg");
@@ -47,21 +35,36 @@
         }
     }
     .logged-in-ctnr {
-        .btn {
-            margin-bottom: 10px;
+        .name-ctnr {
+            .name-form {
+                .name-input {
+                    margin-bottom: 10px;
+                }
+                .col-save {
+                    padding-right: 5px;
+                }
+                .col-cancel {
+                    padding-left: 5px;
+                }
+                .btn {
+                    font-size: 14px;
+                }
+            }
+            .name {
+                font-size: 16px;
+                margin-top: 4px;
+            }
+            .btn-edit-name {
+                margin-bottom: 0;
+                font-size: 12px;
+                padding: 5px 10px;
+                width: auto;
+            }
         }
-        .name-input {
-            // &:focus {
-            //     border: none;
-            // }
-        }
-        .divider {
-            border-bottom: 1px solid lighten(@font-color, 50%);
-            height: 11px;
-            margin: 10px auto 20px;
-            width: 25%;
-            text-align: center;
-            font-size: 14px;
+        .game-btn-ctnr {
+            .btn {
+                margin-bottom: 10px;
+            }
         }
     }
 }
