--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -52,11 +52,12 @@
             }
             .fa-cog {
                 margin-top: 0;
-                margin-left: 0.5px;
+                margin-left: 1px;
             }
             .fa-user {
                 margin-top: 0;
                 margin-left: 0px;
+                margin-right: 1px;
             }
         }
         .title {
@@ -112,10 +113,18 @@
         }
     }
     .profile {
-        p {
+        .desc {
+            color: @secondary-color;
+            margin-bottom: 10px;
             font-size: 14px;
-            margin: 20px 0;
-            font-weight: @font-weight-semibold;
+            font-weight: 600;
+            &:not(:first-child) {
+                margin-top: 20px;
+            }
+        }
+        .value {
+            font-size: 20px;
+            margin-bottom: 10px;
         }
         .btn-danger {
             margin: 30px 0 10px;
