--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -17,6 +17,7 @@ html
         script(type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js")
         script(type="text/javascript" src="https://apis.google.com/js/platform.js")
 
+        script(src=`/node_modules/pusher-js/dist/web/pusher.min.js?${timestamp}`)
         script(src=`/node_modules/@babel/polyfill/dist/polyfill.min.js?${timestamp}`)
         script(src=`/node_modules/zone.js/dist/zone.min.js?${timestamp}`)
 
