--- a/client/less/common.less
+++ b/client/less/common.less
@@ -148,6 +148,7 @@ input {
 
 .modal-body {
     color: @font-color;
+    padding: 15px;
     .fa-times {
         font-size: 18px;
         position: absolute;
