--- a/client/src/app/partials/header/header.less
+++ b/client/src/app/partials/header/header.less
@@ -113,6 +113,7 @@
         }
     }
     .profile {
+        margin: 0 15px;
         .desc {
             color: @secondary-color;
             margin-bottom: 10px;
