--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -2,10 +2,10 @@ doctype html
 html
     head
         meta(charset="UTF-8")
-        meta(name="description" content="The only game you'll ever need.")
+        meta(name="description" content="Play Reversi online, also known as Othello. A classic strategy board game for two players. Host a game and play with friends.")
         meta(name="viewport" content="width=device-width, initial-scale=0.8")
         base(href="/")
-        title Reversi
+        title Reversi - Online Multiplayer
         link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
         link(href="/node_modules/lato-font/css/lato-font.min.css" rel="stylesheet")
         link(href=`/node_modules/bootstrap/dist/css/bootstrap.min.css?${timestamp}` rel="stylesheet")
