--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -4,6 +4,7 @@ html
         meta(charset="UTF-8")
         meta(name="description" content="Play Reversi online, also known as Othello. A classic strategy board game for two players. Host a game and play with friends.")
         meta(name="viewport" content="width=device-width, initial-scale=0.8")
+        meta(name="keywords" content="reversi, othello, play, board, game, online, multiplayer")
         base(href="/")
         title Reversi - Online Multiplayer
         link(rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico")
