--- a/client/src/app/match/match.less
+++ b/client/src/app/match/match.less
@@ -8,6 +8,7 @@
 }
 .board {
     max-width: 640px;
+    width: 640px;
     margin: 15px auto 0;
     user-select: none;
     &.activeplayer {
@@ -23,6 +24,9 @@
             &.hoverLight, &.hoverDark {
                 .piece {
                     opacity: 1;
+                }
+                @media(hover: none) {
+                    opacity: 0;
                 }
             }
         }
@@ -76,6 +80,7 @@
 }
 .score-ctnr {
     padding-top: 30px;
+    min-width: 639px;
     .player-ctnr {
         border: 1px solid @border-color;
         min-height: 90px;
