--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -3,7 +3,7 @@ html
     head
         meta(charset="UTF-8")
         meta(name="description" content="Play Reversi online, also known as Othello. A classic strategy board game for two players. Host a game and play with friends.")
-        meta(name="viewport" content="width=device-width, initial-scale=0.8")
+        meta(name="viewport" content="width=660px, initial-scale=0.48")
         meta(name="keywords" content="reversi, othello, play, board, game, online, multiplayer")
         base(href="/")
         title Reversi - Online Multiplayer
